# rust_wordle_utils

./: Cargo.toml
examples/: simple-cat.rs
src/: lib.rs  wordle_game.rs
